basic_test_fastapi/production_like/deploy_with_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-test-py
  namespace: basic-ns12
spec:
  replicas: 4
  selector:
    matchLabels:
      run: basic-test-py
  template:
    metadata:
      labels:
        run: basic-test-py
    spec:
      containers:
      - name: test-py-container
        image: aidamian/basic_test_fastapi        
        ports:
        - containerPort: 5050
          protocol: TCP
        #enviroment variables
---
apiVersion: v1
kind: Service
metadata:
  name: basic-test-py-svc
  namespace: basic-ns12
spec:
  type: ClusterIP
  selector:
    run: basic-test-py
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-test-py-ingress
  namespace: basic-ns12
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /basic_test
        pathType: Prefix
        backend:
          service:
            name: basic-test-py-svc
            port:
              number: 5050
